--- a/templates/first.html
+++ b/templates/first.html
@@ -3,6 +3,6 @@
 {% block body %}
   <h1>First Page</h1>
 
-  "A beautiful body perishes, but a work of art dies not." - Leonardo da Vinci
+  A beautiful body perishes, but a work of art dies not. - Leonardo da Vinci
 
 {% endblock %}
