--- a/templates/second.html
+++ b/templates/second.html
@@ -3,6 +3,6 @@
 {% block body %}
   <h1>Second Page</h1>
 
-  "The noblest pleasure is the joy of understanding." - Leonardo da Vinci
+  The noblest pleasure is the joy of understanding. - Leonardo da Vinci
 
 {% endblock %}
