--- a/templates/third.html
+++ b/templates/third.html
@@ -3,6 +3,6 @@
 {% block body %}
   <h1>Third Page</h1>
 
-  "Iron rusts from disuse; water loses its purity from stagnation... even so does inaction sap the vigor of the mind." - Leonardo da Vinci
+  Iron rusts from disuse; water loses its purity from stagnation... even so does inaction sap the vigor of the mind. - Leonardo da Vinci
 
 {% endblock %}
