--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,15 @@
 
         });
 
+        // Update text on popping stateee
+        window.onpopstate = e => {
+          const data = e.state;
+          document.title = data.title;
+          document.querySelector('#body').innerHTML = data.text;
+        }
+
+
+
         // Renders content
         function load_page(name) {
             const request = new XMLHttpRequest();
@@ -30,7 +39,7 @@
 
               // Push state to url
               document.title = name;
-              history.pushState(null, name, name);
+              history.pushState({'title': name, 'text': response}, name, name);
             };
             request.send();
         }
